Bug 515280 - Ctrl + F doesn't focus search bar
Summary: Ctrl + F doesn't focus search bar
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.6.80
Platform: KDE Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 515279 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-01-29 23:00 UTC by Tamás Králl
Modified: 2026-05-28 11:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Králl 2026-01-29 23:00:18 UTC
SUMMARY
Hovering over the search bar in the Networks widget shows a Ctrl + F tooltip. However, Ctrl + F doesn't focus the search bar.

STEPS TO REPRODUCE
1. Open the Networks widget in the system tray.
2. If the search bar is focused, click on the "Keep Open" pin icon to take away the focus.
3. Press Ctrl + F.

OBSERVED RESULT
Search bar isn't focused.

EXPECTED RESULT
Search bar is focused.

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2026-01-29
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.1
Kernel Version: 6.18.6-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 PRO 4650U with Radeon Graphics
Memory: 8 GiB of RAM (7.7 GiB usable)
Graphics Processor: llvmpipe
Manufacturer: QEMU
Product Name: Standard PC (Q35 + ICH9, 2009)
System Version: pc-q35-10.0

ADDITIONAL INFORMATION
This is the same issue as the one in the Clipboard widget (Bug 515279).
Comment 1 Marco Martin 2026-01-30 16:21:30 UTC
everything is enabled correctly, but it seems ctrl+f conflictsand applets try to steal it from each other
Comment 2 Tamás Králl 2026-02-04 14:24:26 UTC
Is that what happens in Bug 515279 as well, or is that caused by something else?
Comment 3 Akseli Lahtinen 2026-05-20 13:24:14 UTC
*** Bug 515279 has been marked as a duplicate of this bug. ***
Comment 4 Akseli Lahtinen 2026-05-20 13:26:59 UTC
From what I can gather, the bug is when changing between system tray applets and other panel applets, the shortcut becomes ambigious.
If you have multiple widgets open, then yes, it does not know what to do so it does nothing.

But even when I have pressed ctrl+f in clipboard widget, then change to another app, open network widget, press ctrl+f, it does not work: It's still ambigious. 

The previous search field is still active and its shortcut is still enabled. 

So I think the logic that switches between the systray popups does not tell the popups that they need to deactivate the shortcut(s).
Comment 5 Bug Janitor Service 2026-05-20 13:51:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3727
Comment 6 Bug Janitor Service 2026-05-21 08:20:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1493
Comment 7 Marco Martin 2026-05-26 14:46:56 UTC
Here are 2 upstream Qt bugs that cause this ("part" of the bug is on QWindow level , part of the bug is on QML level)
https://qt-project.atlassian.net/browse/QTBUG-146992
https://qt-project.atlassian.net/browse/QTBUG-146993
Comment 9 Bug Janitor Service 2026-05-27 14:04:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3751
Comment 10 Akseli Lahtinen 2026-05-27 15:18:06 UTC
Git commit 2fd41a07298aba91474c53517450fa328d704298 by Akseli Lahtinen.
Committed on 27/05/2026 at 14:04.
Pushed by akselmo into branch 'master'.

CompactApplet: Enable mainItem based on dialog visibility

If there are multiple windows under a parent window as
their transientparent, and if there is one visible
child window in the focus, all the windows will
report being active.
See QTBUG-146992 for more.

When dialog is not visible, set the mainItem disabled,
so that we do not send any unnecessary keyboard shortcut
signals to anything it holds, as they still are
active even if they're not visible.

M  +6    -0    desktoppackage/contents/applet/CompactApplet.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/2fd41a07298aba91474c53517450fa328d704298
Comment 11 Akseli Lahtinen 2026-05-28 11:39:24 UTC
Git commit 3acd82b20e4135a37dc51228573da19b840ac72c by Akseli Lahtinen.
Committed on 28/05/2026 at 10:28.
Pushed by akselmo into branch 'Plasma/6.7'.

CompactApplet: Enable mainItem based on dialog visibility

If there are multiple windows under a parent window as
their transientparent, and if there is one visible
child window in the focus, all the windows will
report being active.
See QTBUG-146992 for more.

When dialog is not visible, set the mainItem disabled,
so that we do not send any unnecessary keyboard shortcut
signals to anything it holds, as they still are
active even if they're not visible.


(cherry picked from commit 2fd41a07298aba91474c53517450fa328d704298)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +6    -0    desktoppackage/contents/applet/CompactApplet.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/3acd82b20e4135a37dc51228573da19b840ac72c