AppletQuickItem: Set fullRepresentationItem enabled with expanded

If there are multiple windows under a parent window as
their transientparent, and if there is one visible
child window in the focus, all the windows will
report being active.
See QTBUG-146992 for more.

Current workaround for this is setting the
fullRepresentationItem disabled when it's not
expanded, as the shortcut elements expect their
parent to be enabled. When item is not expanded,
it's also not visible, which allows us to set
the enabled status relatively safely without
interrupting the user.

BUG: 515280